--- a/less/mobile.less
+++ b/less/mobile.less
@@ -28,6 +28,7 @@
 
     nav.mobile-hide {
       height: 50px;
+      width: 100%;
       cursor: pointer;
       a {
         color: transparent;
@@ -72,6 +73,7 @@
   main {
     width: 90%;
     margin: auto;
+
     article.team_member {
       figure {
         min-width: none;
@@ -84,9 +86,14 @@
       width: auto;
 
       figure {
+        margin: 0;
         min-width: auto;
+        
+        img {
+          height: auto;
+        }
       }
-      
+
       section.content {
         text-align: center;
       }
